--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>Tiny 4WD Web Control</title>
+<title>Robot Web Control</title>
 <link rel="stylesheet" href='../static/style.css'/>
 
 
@@ -11,7 +11,7 @@
 
 
 <body>
-<h1>Testbed Web Controls</h1>
+<h1>Robot Web Controls</h1>
 <canvas id="crosspad" width="256" height="256" >
 </canvas>
 
