--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 
 <meta charset="utf-8">
-<title>Robot Web Control</title>
+<title>Robot Web Controls</title>
 <link rel="stylesheet" href='../static/style.css'/>
 
 
@@ -11,7 +11,7 @@
 
 
 <body>
-<h1>Robot Web Controls</h1>
+<h1> Robot Web Controls</h1>
 <canvas id="crosspad" width="256" height="256" >
 </canvas>
 
@@ -55,7 +55,6 @@ function doMouseDown(event) {
 	
 	if (canvas_Y < 100 && (canvas_x >= 102 && canvas_x <= 169)) {
 	   console.log("Mouse: Up");
-	   //fetch("http://testbed.lan/motor/forward", { mode: 'no-cors'})
 	   document.getElementById("message").innerHTML = "Up";
 	   img.src = 'static/D-Pad-up.png'; // Set source path to right 
 	   ctx.drawImage(img, 0, 0);
@@ -64,7 +63,6 @@ function doMouseDown(event) {
 	
 	if (canvas_Y > 169 && (canvas_x >= 102 && canvas_x <= 169)) {
 	   console.log("Mouse: Down");
-	   //fetch("http://testbed.lan/motor/backward", { mode: 'no-cors'})
 	   document.getElementById("message").innerHTML = "Down";
 	   img.src = 'static/D-Pad-down.png'; // Set source path to right 
 	   ctx.drawImage(img, 0, 0);
@@ -74,7 +72,6 @@ function doMouseDown(event) {
 	
 	if ((canvas_x <= 101 && canvas_x >= 39) && (canvas_Y >= 102 && canvas_Y <= 169)) {
 	   console.log("Mouse: Left");
-	   //fetch("http://testbed.lan/motor/left", { mode: 'no-cors'})
 	   document.getElementById("message").innerHTML = "Left";
 	   img.src = 'static/D-Pad-left.png'; // Set source path to right 
 	   ctx.drawImage(img, 0, 0);
@@ -83,7 +80,6 @@ function doMouseDown(event) {
 	   
 	if ((canvas_x <= 234 && canvas_x >= 169) && (canvas_Y >= 102 && canvas_Y <= 169)) {
        console.log("Mouse: Right");
-	   //fetch("http://testbed.lan/motor/right", { mode: 'no-cors'})
 	   document.getElementById("message").innerHTML = "Right";
 	   img.src = 'static/D-Pad-right.png'; // Set source path to right 
 	   ctx.drawImage(img, 0, 0);
@@ -91,14 +87,13 @@ function doMouseDown(event) {
 	   }
 }
 
-function stopMotors(event) {
+function stopMotors() {
     	
 	document.getElementById("message").innerHTML = "Stop Motors";
 	console.log("mouse button or key released: Motors stopped")
 	lastKey = "Off";
 	img.src = 'static/D-Pad.png'; // Set source path to blank 
 	ctx.drawImage(img, 0, 0);
-	//fetch("http://testbed.lan/motor/off", { mode: 'no-cors'})
     fetch("/motor/off", { mode: 'no-cors'})
 
 }
@@ -106,12 +101,11 @@ function stopMotors(event) {
 function keyPressed(event) {
   //document.getElementById("message").innerHTML = event.keyCode;
   console.log("Key pressed: " + event.key + " last Key pressed: " + lastKey);
-  if (event.key != lastKey) {
+  if (event.key !== lastKey) {
   lastKey = event.key;
   console.log("Updated lastKey " + lastKey);
   switch(event.key){
     case ("ArrowRight"):
-	  //fetch("http://testbed.lan/motor/right", { mode: 'no-cors'})
       fetch("/motor/right", { mode: 'no-cors'})
 	  document.getElementById("message").innerHTML = "Right";
 	  img.src = 'static/D-Pad-right.png'; // Set source path to right 
@@ -119,7 +113,6 @@ function keyPressed(event) {
 	  break;
 	  
 	case (("d")):
-	  //fetch("http://testbed.lan/motor/right", { mode: 'no-cors'})
       fetch("/motor/right", { mode: 'no-cors'})
 	  document.getElementById("message").innerHTML = "Right";
 	  img.src = 'static/D-Pad-right.png'; // Set source path to right 
@@ -127,7 +120,6 @@ function keyPressed(event) {
 	  break;
 	  
 	case ("ArrowLeft"):
-	  //fetch("http://testbed.lan/motor/left", { mode: 'no-cors'})
       fetch("/motor/left", { mode: 'no-cors'})
 	  document.getElementById("message").innerHTML = "Left";
 	  img.src = 'static/D-Pad-left.png'; // Set source path to right 
@@ -135,7 +127,6 @@ function keyPressed(event) {
 	  break;
 	  
 	case ("a"):
-	  //fetch("http://testbed.lan/motor/left", { mode: 'no-cors'})
       fetch("/motor/left", { mode: 'no-cors'})
 	  document.getElementById("message").innerHTML = "Left";
 	  img.src = 'static/D-Pad-left.png'; // Set source path to right 
@@ -143,7 +134,6 @@ function keyPressed(event) {
 	  break;
 	
 	case ("ArrowUp"):
-	  //fetch("http://testbed.lan/motor/forward", { mode: 'no-cors'})
       fetch("/motor/forward", { mode: 'no-cors'})
 	  document.getElementById("message").innerHTML = "Up";
 	  img.src = 'static/D-Pad-up.png'; // Set source path to right 
@@ -151,7 +141,6 @@ function keyPressed(event) {
 	  break;
 	  
 	case ("w"):
-	  //fetch("http://testbed.lan/motor/forward", { mode: 'no-cors'})
       fetch("/motor/forward", { mode: 'no-cors'})
 	  document.getElementById("message").innerHTML = "Up";
 	  img.src = 'static/D-Pad-up.png'; // Set source path to right 
@@ -159,16 +148,14 @@ function keyPressed(event) {
 	  break;
 	  
 	case ("ArrowDown"):
-	  //fetch("http://testbed.lan/motor/backward", { mode: 'no-cors'})
-      fetch("/motor/backward", { mode: 'no-cors'})
+	        fetch("/motor/backward", { mode: 'no-cors'})
 	  document.getElementById("message").innerHTML = "Down";
 	  img.src = 'static/D-Pad-down.png'; // Set source path to right 
 	  ctx.drawImage(img, 0, 0);
 	  break;
 	  
 	case ("s"):
-	  //fetch("http://testbed.lan/motor/backward", { mode: 'no-cors'})
-      fetch("/motor/backward", { mode: 'no-cors'})
+	        fetch("/motor/backward", { mode: 'no-cors'})
 	  document.getElementById("message").innerHTML = "Down";
 	  img.src = 'static/D-Pad-down.png'; // Set source path to right 
 	  ctx.drawImage(img, 0, 0);
