--- a/templates/video.html
+++ b/templates/video.html
@@ -14,7 +14,7 @@
 <h1>Robot Web Controls</h1>
 
 <!--<img  video source>-->
-<img src="<robot camera ip address">:<port number>">
+<img src="<robot camera ip address>:<port number>">
 <p></p>
 <canvas id="crosspad" width="256" height="256" >
 </canvas>
